# DBMS-Project

./: .gitignore  CMakeLists.txt  README.md  baseline.txt  clean_metrics.csv  main.tex  nohup.out  optimized.txt  optimized_final.txt  replace.js  replace1.js  replace2.js  requirements.txt  sample.db  test_query.txt  week4_metrics.csv
cpp/include/: buffer_pool_manager.h  kd_tree.h  lru_replacer.h  page.h  rtree_index.h  rtree_node.h  slotted_page.h  storage_manager.h  vec1_reader.h
cpp/src/: buffer_pool_manager.cpp  kd_tree.cpp  lru_replacer.cpp  rtree_index.cpp  rtree_node.cpp  slotted_page.cpp  storage_manager.cpp  vec1_reader.cpp
cpp/tests/: bpm_benchmark.cpp  bpm_test.cpp  kd_tree_test.cpp  packing_test.cpp  rtree_insert_test.cpp  rtree_knn_test.cpp  rtree_metadata_test.cpp  rtree_node_test.cpp  rtree_point_test.cpp  storage_manager_smoke.cpp
cpp/tools/: bulk_load.cpp  incremental_insert.cpp  kd_analysis_benchmark.cpp  week4_query_benchmark.cpp
data/: pca_model.npz
docs/: BUFFER_POOL_OPTIMIZATIONS.md  WEEK1_IMPLEMENTATION_DETAILS.md  WEEK1_START.md  WEEK2_PERFORMANCE.md  WEEK3_INDEX_FOUNDATION.md  WEEK4_QUERY_LAYER.md  WEEK5_IMAGE_SEARCH_AND_MERN.md
mern/: README.md
mern/backend/: .env.example  package-lock.json  package.json  server.js
mern/frontend/: index.html  package-lock.json  package.json
mern/frontend/src/: App.jsx  styles.css
scripts/: benchmark_sqlite_vs_rtree.py  cleanup_generated_files.sh  extract_embeddings.py  image_search_api.py  pca_utils.py  populate_database.py  validate_vec1.py  week4_query_api.py
